--- a/lib/libc/gen/getbsize.3
+++ b/lib/libc/gen/getbsize.3
@@ -1,3 +1,5 @@
+.\"	$NetBSD: getbsize.3,v 1.2 1995/02/25 13:41:31 cgd Exp $
+.\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -29,8 +31,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	from: @(#)getbsize.3  8.1 (Berkeley) 6/4/93
-.\"	$Id: getbsize.3,v 1.1 1994/01/27 23:58:45 cgd Exp $
+.\"     @(#)getbsize.3	8.1 (Berkeley) 6/4/93
 .\"
 .Dd June 4, 1993
 .Dt GETBSIZE 3
