--- a/bin/sh/sh.1
+++ b/bin/sh/sh.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: sh.1,v 1.122 2016/05/09 20:36:07 kre Exp $
+.\"	$NetBSD: sh.1,v 1.123 2016/05/12 13:15:43 kre Exp $
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -1538,6 +1538,16 @@ Traditionally Bourne-like shells
 (except
 .Xr ksh 1 ) ,
 made those file descriptors available to exec'ed processes.
+To turn off the close-on-exec mark,
+redirect the descriptor to (or from) itself,
+either when invoking a command for which the descriptor is wanted open,
+or by using
+.Ic exec
+(perhaps the same
+.Ic exec
+as opened it, after the open)
+to leave the descriptor open in the shell
+and pass it to all commands invoked subsequently.
 .It exit Op Ar exitstatus
 Terminate the shell process.
 If
