--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2159 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2160 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -233,6 +233,7 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 	bind: Import version 9.10.3-P2. [christos 20151216]
 	mdocml: Import 1.13.3. [christos 20151217]
 	sortinfo(1): Add utility to sort texinfo dir files [christos 20151218]
+	x86: Add support for SMEP on amd64 and i386. [maxv 20151219]
 	raidframe: Now built as a kernel module; it can be built-in at
 		kernel build time, or (for MODULAR kernels) loaded as
 		needed. [pgoyette 20151226]
