--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2161 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2162 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -289,3 +289,7 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 	openssl: Import openssl 1.0.1t - security fixes [christos 20160503]
 	acpi(4): Updated ACPICA to 20160422. [christos 20160504]
 	dhcpcd(8): Import dhcpcd-6.11.0 [roy 20160509]
+	x86: Map the kernel image segments independently with fine-grained
+		permissions on amd64 and i386. [maxv 20160514]
+	x86: Use processor-specific features to optimize memory access time to
+		the kernel image on amd64 and i386. [maxv 20160515]
