--- a/usr.sbin/makemandb/apropos.1
+++ b/usr.sbin/makemandb/apropos.1
@@ -1,4 +1,4 @@
-.\" $NetBSD: apropos.1,v 1.15 2014/11/04 08:05:21 snj Exp $
+.\" $NetBSD: apropos.1,v 1.16 2016/05/22 19:26:04 abhinav Exp $
 .\"
 .\" Copyright (c) 2011 Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd November 22, 2013
+.Dd May 22, 2016
 .Dt APROPOS 1
 .Os
 .Sh NAME
@@ -37,7 +37,8 @@
 .Nd search the complete content of all man pages
 .Sh SYNOPSIS
 .Nm
-.Op Fl 123456789CchilPpr
+.Op Fl 123456789hilMmPpr
+.Op Fl C Ar path
 .Op Fl n Ar results
 .Op Fl S Ar machine
 .Op Fl s Ar section
@@ -64,10 +65,11 @@ It supports the following options:
 .Bl -tag -width indent
 .It Fl [1-9]
 Search only within the specified section manual pages.
-.It Fl C
-Do not show the context of the match.
-.It Fl c
-Do show the context of the match (default).
+.It Fl C Ar path
+Use different
+.Xr man 1
+configuration file than the default,
+.Pa /etc/man.conf .
 .It Fl h
 Turn on html formatting.
 .It Fl i
@@ -75,6 +77,10 @@ Turn on terminal escape code formatting.
 .It Fl l
 Legacy mode: Only searches name and name description.
 Does not print context and turns off formatting.
+.It Fl M
+Do not show the context of the match.
+.It Fl m
+Show the context of the match (default).
 .It Fl n Ar results
 Output up to the specified number of search results.
 The default limit is infinity.
