--- a/usr.sbin/makemandb/whatis.1
+++ b/usr.sbin/makemandb/whatis.1
@@ -1,4 +1,4 @@
-.\" $NetBSD: whatis.1,v 1.2 2012/10/06 15:33:59 wiz Exp $
+.\" $NetBSD: whatis.1,v 1.3 2016/05/22 19:26:04 abhinav Exp $
 .\"
 .\" Copyright (c) 2012 Joerg Sonnenberger <joerg@NetBSD.org>
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 5, 2012
+.Dd May 22, 2016
 .Dt WHATIS 1
 .Os
 .Sh NAME
@@ -35,6 +35,7 @@
 .Nd describe what a command is
 .Sh SYNOPSIS
 .Nm
+.Op Fl C Ar path
 .Ar command Ar ...
 .Sh DESCRIPTION
 The
@@ -45,6 +46,15 @@ It searches for manual pages with name
 .Ar command
 and outputs name of the matching manual pages along with the section and the
 brief description from the NAME section.
+.Pp
+It supports the following options:
+.Bl -tag -width indent
+.It Fl C Ar path
+Use different
+.Xr man 1
+configuration file than the default,
+.Pa /etc/man.conf .
+.El
 .Sh FILES
 .Bl -hang -width /etc/man.conf -compact
 .It Pa /etc/man.conf
