Fix typo. From Michael Scherer in PR 51162.

--- a/usr.sbin/npf/npfctl/npfctl.8
+++ b/usr.sbin/npf/npfctl/npfctl.8
@@ -1,4 +1,4 @@
-.\"	$NetBSD: npfctl.8,v 1.17 2014/08/03 00:02:56 rmind Exp $
+.\"	$NetBSD: npfctl.8,v 1.18 2016/05/24 05:46:57 wiz Exp $
 .\"
 .\" Copyright (c) 2009-2014 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -138,7 +138,7 @@ List all entries in the currently loaded table specified by
 This operation is expensive and should be used with caution.
 .\" ---
 .It Ic save
-Save the active configuration and a spanshot of the current connections.
+Save the active configuration and a snapshot of the current connections.
 The data will be stored in the
 .Pa /var/db/npf.db
 file.
