--- a/usr.bin/pwhash/pwhash.1
+++ b/usr.bin/pwhash/pwhash.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: pwhash.1,v 1.7 2009/10/16 08:09:12 wiz Exp $
+.\"	$NetBSD: pwhash.1,v 1.8 2016/05/24 06:15:43 abhinav Exp $
 .\"	$OpenBSD: encrypt.1,v 1.16 2000/11/09 17:52:07 aaron Exp $
 .\"
 .\" Copyright (c) 1996, Jason Downs.  All rights reserved.
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 16, 2009
+.Dd May 24, 2016
 .Dt PWHASH 1
 .Os
 .Sh NAME
@@ -57,7 +57,7 @@ A single combined key (eight chars) and salt (two chars) with no
 intermediate space are read from standard input and the DES encrypted
 result is written to standard output without a terminating newline.
 .It Fl m
-Encrypt the string using MD5.
+Hash the string using MD5.
 .It Fl p
 Prompt for a single string with echo turned off.
 .It Fl S Ar rounds
