Bring man pages in sync with reality.
Remove man pages run_query_html.3 and run_query_pager.3 as the corresponding
functions have been removed from apropos-utils.c
Ok by wiz@

--- a/usr.sbin/makemandb/close_db.3
+++ b/usr.sbin/makemandb/close_db.3
@@ -1,4 +1,4 @@
-.\" $NetBSD: close_db.3,v 1.1 2012/02/07 19:13:32 joerg Exp $
+.\" $NetBSD: close_db.3,v 1.2 2016/05/24 18:06:42 abhinav Exp $
 .\"
 .\" Copyright (c) 2011 Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 17, 2011
+.Dd May 23, 2016
 .Dt CLOSE_DB 3
 .Os
 .Sh NAME
@@ -55,8 +55,6 @@ The Sqlite FTS database which contains an index of the manual pages.
 .Sh SEE ALSO
 .Xr apropos-utils 3 ,
 .Xr init_db 3 ,
-.Xr run_query 3 ,
-.Xr run_query_html 3 ,
-.Xr run_query_pager 3
+.Xr run_query 3
 .Sh AUTHORS
 .An Abhinav Upadhyay
