--- a/usr.sbin/makemandb/apropos-utils.3
+++ b/usr.sbin/makemandb/apropos-utils.3
@@ -1,4 +1,4 @@
-.\" $NetBSD: apropos-utils.3,v 1.3 2013/04/02 18:35:28 wiz Exp $
+.\" $NetBSD: apropos-utils.3,v 1.4 2016/05/24 18:06:42 abhinav Exp $
 .\"
 .\" Copyright (c) 2011 Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd April 2, 2013
+.Dd May 23, 2016
 .Dt APROPOS-UTILS 3
 .Os
 .Sh NAME
@@ -38,7 +38,7 @@
 .Sh SYNOPSIS
 .In apropos-utils.h
 .Ft sqlite3 *
-.Fn init_db "int db_flag"
+.Fn init_db "mandb_access_mode db_flag" "const char * manconf"
 .Ft void
 .Fn close_db "sqlite3 *db"
 .Ft int
@@ -56,6 +56,6 @@ develop applications on top of it.
 .Sh SEE ALSO
 .Xr close_db 3 ,
 .Xr init_db 3 ,
-.Xr run_query 3 ,
+.Xr run_query 3
 .Sh AUTHORS
 .An Abhinav Upadhyay
