--- a/usr.sbin/makemandb/run_query.3
+++ b/usr.sbin/makemandb/run_query.3
@@ -1,4 +1,4 @@
-.\" $NetBSD: run_query.3,v 1.3 2014/10/18 08:33:31 snj Exp $
+.\" $NetBSD: run_query.3,v 1.4 2016/05/24 18:06:42 abhinav Exp $
 .\"
 .\" Copyright (c) 2011 Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 3, 2011
+.Dd May 23, 2016
 .Dt RUN_QUERY 3
 .Os
 .Sh NAME
@@ -40,7 +40,7 @@ and process the results in a callback function.
 .Sh SYNOPSIS
 .In apropos-utils.h
 .Ft int
-.Fn run_query "sqlite3 *db" "const char **snippet_args" "query_args *args"
+.Fn run_query "sqlite3 *db" "query_format fmt" "query_args *args"
 .Sh DESCRIPTION
 The
 .Fn run_query
@@ -60,32 +60,16 @@ function takes following arguments:
 .It Fa sqlite3 *db
 Handle to the database connection which can be obtained by calling
 .Fn init_db .
-.It Fa const char *snippet_args
-An array of strings which specify the
-delimiters to the matching text in snippet.
-It is an optional argument and caller can supply a
-.Dv NULL
-value for it, in which case, a default value of
-.Brq \&"\&", \&"\&", \&"...\&"
-will be used.
-The 3 members of the array specify the following values:
-.Bl -enum -offset indent
-.It
-The first element marks the beginning of each matching token in the snippet.
-.It
-The second element the end of each matching token in the snippet.
-.It
-The third element is used to delimit the beginning and end of the snippet.
+.It Fa query_format fmt
+An enum value
+indicating the output format.
+Currently you can specify following values:
+.Bl -hang -width compact
+.It Dv APROPOS_PAGER
+.It Dv APROPOS_TERM
+.It Dv APROPOS_HTML
+.It Dv APROPOS_NONE
 .El
-For example for highlighting matching tokens in HTML style mark-up, use this
-value:
-.Bd -literal -offset indent
- const char **snippet_args = {
-	"<b>",
-	"</b>",
-	"..."
- };
-.Ed
 .It Fa query_args *args
 .Ft query_args
 is a struct which is defined in
@@ -120,6 +104,8 @@ For example if the value of nrec is m and value of offset is n, then the first
 n records from the result-set will be omitted and rest m-n (or less) records will
 be available for processing inside the callback.
 Use a negative value if you don't wish to offset any records.
+.It Li int legacy
+If the output should be in legacy format (similary to classic apropos).
 .It Li const char *machine
 The machine architecture to which the searches should be restricted.
 Specify NULL if the search should not be restricted a particular machine architecture.
@@ -195,7 +181,7 @@ args.machine = NULL;
 args.callback = &query_callback;
 args.callback_data = NULL;
 args.errmsg = &errmsg;
-if (run_query(db, NULL, &args) < 0)
+if (run_query(db, APROPOS_PAGER, &args) < 0)
 		errx(EXIT_FAILURE, "%s", errmsg);
 }
 
@@ -217,8 +203,6 @@ query_callback(void *data, const char *section, const char *name,
 .Sh SEE ALSO
 .Xr apropos-utils 3 ,
 .Xr close_db 3 ,
-.Xr init_db 3 ,
-.Xr run_query_html 3 ,
-.Xr run_query_pager 3
+.Xr init_db 3
 .Sh AUTHORS
 .An Abhinav Upadhyay
