--- a/sys/arch/sparc64/conf/INSTALL
+++ b/sys/arch/sparc64/conf/INSTALL
@@ -1,12 +1,12 @@
-# 	$NetBSD: INSTALL,v 1.29 2013/12/15 07:52:53 christos Exp $
+#	$NetBSD: INSTALL,v 1.30 2016/05/25 20:00:50 nakayama Exp $
 #
 #	NOTE: this file only needs *additional* things for the install
 #	kernel, that are not already included in GENERIC!
 #	See the include below...
 
-include "arch/sparc64/conf/GENERIC"
+include 	"arch/sparc64/conf/GENERIC"
 
-#ident 		"INSTALL-$Revision: 1.29 $"
+#ident		"INSTALL-$Revision: 1.30 $"
 
 makeoptions	COPTS="-Os -Wno-uninitialized"
 
