--- a/bin/test/test.1
+++ b/bin/test/test.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: test.1,v 1.28 2012/12/16 17:57:49 wiz Exp $
+.\"	$NetBSD: test.1,v 1.29 2016/05/27 05:50:07 dholland Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -275,7 +275,7 @@ True if either
 .Ar expression1
 or
 .Ar expression2
-are true.
+is true.
 .It Cm \&( Ar expression Cm \&)
 True if
 .Ar expression
