Correct list of operations to note that SLISTs and SIMPLEQs cannot insert entries before existing entries.  This can only be done for LISTs and TAILQs.
Fixes PR kern/50845

--- a/share/man/man3/queue.3
+++ b/share/man/man3/queue.3
@@ -1,4 +1,4 @@
-.\"	$NetBSD: queue.3,v 1.51 2016/02/02 12:25:24 ryoon Exp $
+.\"	$NetBSD: queue.3,v 1.52 2016/05/31 06:00:38 pgoyette Exp $
 .\"
 .\" Copyright (c) 2000, 2002 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -53,7 +53,7 @@
 .\"
 .\"	@(#)queue.3	8.1 (Berkeley) 12/13/93
 .\"
-.Dd February 2, 2016
+.Dd May 31, 2016
 .Dt QUEUE 3
 .Os
 .Sh NAME
@@ -256,7 +256,7 @@ All five structures support the following functionality:
 .It
 Insertion of a new entry at the head of the list.
 .It
-Insertion of a new entry before or after any element in the list.
+Insertion of a new entry after any element in the list.
 .It
 Removal of any entry in the list.
 .It
