--- a/common/lib/libprop/prop_array_util.3
+++ b/common/lib/libprop/prop_array_util.3
@@ -1,4 +1,4 @@
-.\"	$NetBSD: prop_array_util.3,v 1.7 2011/10/17 09:24:54 wiz Exp $
+.\"	$NetBSD: prop_array_util.3,v 1.8 2016/05/31 09:29:25 pgoyette Exp $
 .\"
 .\" Copyright (c) 2006 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd March 12, 2011
+.Dd May 31, 2016
 .Dt PROP_ARRAY_UTIL 3
 .Os
 .Sh NAME
@@ -58,8 +58,10 @@
 .Nm prop_array_add_uint32 ,
 .Nm prop_array_add_int64 ,
 .Nm prop_array_add_uint64 ,
+.Nm prop_array_add_cstring ,
 .Nm prop_array_get_cstring ,
 .Nm prop_array_set_cstring ,
+.Nm prop_array_add_cstring_nocopy ,
 .Nm prop_array_get_cstring_nocopy ,
 .Nm prop_array_set_cstring_nocopy ,
 .Nm prop_array_add_and_rel
@@ -153,12 +155,16 @@
 .Fn prop_array_add_uint64 "prop_array_t dict" "uint64_t val"
 .\"
 .Ft bool
+.Fn prop_array_add_cstring "prop_array_t dict" "const char *cp"
+.Ft bool
 .Fn prop_array_get_cstring "prop_array_t dict" "unsigned int indx" \
     "char **strp"
 .Ft bool
 .Fn prop_array_set_cstring "prop_array_t dict" "unsigned int indx" \
     "const char *str"
 .\"
+.Ft bool
+.Fn prop_array_add_cstring_nocopy "prop_array_t dict" "const char *cp"
 .Ft bool
 .Fn prop_array_get_cstring_nocopy "prop_array_t dict" \
     "unsigned int indx" "const char **strp"
@@ -181,14 +187,17 @@ value type.
 The setters handle object creation and release for the caller.
 .Pp
 The
+.Fn prop_array_add_cstring
+and
 .Fn prop_array_get_cstring
-function returns dynamically allocated memory.
+functions returns dynamically allocated memory.
 See
 .Xr prop_string 3
 for more information.
 .Pp
 The
-.Fn prop_array_get_cstring_nocopy
+.Fn prop_array_add_cstring_nocopy,
+.Fn prop_array_get_cstring_nocopy,
 and
 .Fn prop_array_set_cstring_nocopy
 functions do not copy the string that is set or returned.
