Punctuation nits. (adding space makes sure they are not marked up)

--- a/common/lib/libprop/prop_array_util.3
+++ b/common/lib/libprop/prop_array_util.3
@@ -1,4 +1,4 @@
-.\"	$NetBSD: prop_array_util.3,v 1.8 2016/05/31 09:29:25 pgoyette Exp $
+.\"	$NetBSD: prop_array_util.3,v 1.9 2016/05/31 09:31:13 wiz Exp $
 .\"
 .\" Copyright (c) 2006 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -196,8 +196,8 @@ See
 for more information.
 .Pp
 The
-.Fn prop_array_add_cstring_nocopy,
-.Fn prop_array_get_cstring_nocopy,
+.Fn prop_array_add_cstring_nocopy ,
+.Fn prop_array_get_cstring_nocopy ,
 and
 .Fn prop_array_set_cstring_nocopy
 functions do not copy the string that is set or returned.
