Note update of tzdata to 2016d:
	Import tzdata2016d from ftp://ftp.iana.org/tz/releases/tzdata2016d.tar.gz

	Summary of changes in tzdata2016d (2016-04-17 22:50:29 -0700):
	  * America/Caracas switches from -0430 to -04 on 2016-05-01 at 02:30.
	  * Asia/Magadan switches from +10 to +11 on 2016-04-24 at 02:00.
	  * New zone Asia/Tomsk, split off from Asia/Novosibirsk.
	  * New zone Europe/Kirov, split off from Europe/Volgograd.
	  * Russia and nearby locations had daylight-saving transitions on
	    1992-03-29 at 02:00 and 1992-09-27 at 03:00, instead of on
	    1992-03-28 at 23:00 and 1992-09-26 at 23:00.
	  * Many corrections to historical time in Kazakhstan from 1991
	    through 2005.
	  * Mention Internet RFCs 7808 (TZDIST) and 7809 (CalDAV time zone references).

	Summary of changes in tzdata2016c (2016-03-23 00:51:27 -0700):
	  * Azerbaijan no longer observes DST.
	  * Chile reverts from permanent to seasonal DST.
	  * Europe/Kaliningrad and Europe/Vilnius changed from +03/+04 to
	    +02/+03 on 1989-03-26, not 1991-03-31.
	  * Several updates and URLs for historical and proposed Russian changes.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2166 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2167 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -310,3 +310,4 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 		the kernel image on amd64 and i386. [maxv 20160515]
 	arm: Add support for i.MX7 SoC. [ryo 20160517]
 	bind: Import version 9.10.4-P1. [christos 20160526]
+	zoneinfo: Import tzdata2016d. [agc 20160531]
