Fix AT&T version reference.  From PR misc/49519

--- a/share/man/man3/assert.3
+++ b/share/man/man3/assert.3
@@ -1,4 +1,4 @@
-.\"	$NetBSD: assert.3,v 1.13 2007/01/23 20:32:05 wiz Exp $
+.\"	$NetBSD: assert.3,v 1.14 2016/06/01 01:31:11 pgoyette Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"     @(#)assert.3	8.1 (Berkeley) 6/9/93
 .\"
-.Dd January 22, 2007
+.Dd June 1, 2016
 .Dt ASSERT 3
 .Os
 .Sh NAME
@@ -92,7 +92,7 @@ macro conforms to
 A
 .Nm
 macro appeared in
-.At v6 .
+.At v7 .
 .Pp
 Information on the name of the enclosing function appeared in
 .St -isoC-99 .
