Fix formatting.  From PR misc/49516

--- a/share/man/man4/aac.4
+++ b/share/man/man4/aac.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: aac.4,v 1.14 2011/02/19 10:54:31 jmcneill Exp $
+.\"	$NetBSD: aac.4,v 1.15 2016/06/01 01:33:10 pgoyette Exp $
 .\"
 .\" Copyright (c) 2000 Scott Long
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\" from FreeBSD: aac.4,v 1.18 2001/09/27 21:52:42 scottl Exp
-.Dd February 19, 2011
+.Dd June 1, 2016
 .Dt AAC 4
 .Os
 .Sh NAME
@@ -76,8 +76,8 @@ HP NetRAID 4M
 HP ML110 G2 (Adaptec SATA RAID 2610SA)
 .It
 IBM ServeRAID 8k
-.Pp
 .El
+.Pp
 Access to RAID containers is available via the
 .Nm ld
 device driver.
