Remove trailing space.  From PR misc/49516

--- a/share/man/man4/cgd.4
+++ b/share/man/man4/cgd.4
@@ -1,4 +1,4 @@
-.\" $NetBSD: cgd.4,v 1.18 2013/12/01 00:17:14 christos Exp $
+.\" $NetBSD: cgd.4,v 1.19 2016/06/01 01:34:43 pgoyette Exp $
 .\"
 .\" Copyright (c) 2002, 2003 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -50,7 +50,7 @@ To do this, add a line similar to:
 pseudo-device   cgd     # cryptographic disk driver
 .Ed
 .Pp
-The 
+The
 .Nm
 devices are allocated as needed.
 .Ss Encryption Algorithms
