--- a/share/man/man4/mc.4
+++ b/share/man/man4/mc.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: mc.4,v 1.2 2008/09/13 00:50:57 reed Exp $
+.\"	$NetBSD: mc.4,v 1.3 2016/06/01 01:39:52 pgoyette Exp $
 .\"
 .\" Copyright (c) 1997 David Huang <khym@bga.com>
 .\" All rights reserved.
@@ -22,7 +22,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 13, 1997
+.Dd June 1, 2016
 .Dt MC 4
 .Os
 .Sh NAME
@@ -81,9 +81,12 @@ interface first appeared in
 .Sh AUTHORS
 The
 .Nm
-Ethernet driver was written by Dave Huang
+Ethernet driver was written by
+.An Dave Huang
 .Aq khym@bga.com .
-The man page was written by Thomas Klausner
+The man page was written by
+.An Thomas Klausner
 .Aq wiz@NetBSD.org
-and Michael Wolfson
+and
+.An Michael Wolfson
 .Aq mbw@NetBSD.org .
