--- a/share/man/man4/nsclpcsio.4
+++ b/share/man/man4/nsclpcsio.4
@@ -1,4 +1,4 @@
-.\" $NetBSD: nsclpcsio.4,v 1.3 2009/05/18 12:00:46 wiz Exp $
+.\" $NetBSD: nsclpcsio.4,v 1.4 2016/06/01 01:41:27 pgoyette Exp $
 .\"
 .Dd November 9, 2007
 .Dt NSCLPCSIO 4
@@ -12,7 +12,7 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver provides support for the 
+driver provides support for the
 .Tn National Semiconductor
 PC87366 LPC Super I/O.
 The Super I/O incorporates several logical
