Use .An for author names.  From PR misc/49516

--- a/share/man/man4/ss.4
+++ b/share/man/man4/ss.4
@@ -1,6 +1,6 @@
-.\"	$NetBSD: ss.4,v 1.4 2004/03/11 21:24:32 wiz Exp $
+.\"	$NetBSD: ss.4,v 1.5 2016/06/01 01:46:51 pgoyette Exp $
 .\"
-.Dd March 11, 2004
+.Dd June 1, 2016
 .Dt SS 4
 .Os
 .Sh NAME
@@ -37,8 +37,8 @@ operations only.
 .Xr scsi 4 ,
 .Xr uk 4
 .Sh AUTHORS
-Kenneth Stailey,
-Joachim Koenig
+.An Kenneth Stailey ,
+.An Joachim Koenig
 .Sh BUGS
 Only a limited number of
 .Tn HP Scanjet
