--- a/share/man/man4/sony.4
+++ b/share/man/man4/sony.4
@@ -1,4 +1,4 @@
-.\" $NetBSD: sony.4,v 1.2 2008/04/30 13:10:54 martin Exp $
+.\" $NetBSD: sony.4,v 1.3 2016/06/01 01:44:22 pgoyette Exp $
 .\"
 .\" Copyright (c) 2005 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 23, 2007
+.Dd June 1, 2016
 .Dt SONY 4
 .Os
 .Sh NAME
@@ -109,8 +109,10 @@ driver
 appeared in
 .Nx 4.0 .
 .Sh AUTHORS
-Sami Kantoluoto for the original driver and manual information.
-Christos Zoulas for cleaning up the driver and this manual page.
+.An Sami Kantoluoto
+for the original driver and manual information.
+.An Christos Zoulas
+for cleaning up the driver and this manual page.
 .Sh BUGS
 .Bl -bullet
 .It
