--- a/share/man/man8/compat_ibcs2.8
+++ b/share/man/man8/compat_ibcs2.8
@@ -1,4 +1,4 @@
-.\"	$NetBSD: compat_ibcs2.8,v 1.7 2011/11/21 15:11:45 wiz Exp $
+.\"	$NetBSD: compat_ibcs2.8,v 1.8 2016/06/01 01:52:19 pgoyette Exp $
 .\"
 .\" Copyright (c) 1998 Scott Bartram
 .\" Copyright (c) 1995 Frank van der Linden
@@ -32,7 +32,7 @@
 .\"
 .\" Based on compat_linux.8
 .\"
-.Dd February 8, 1998
+.Dd June 1, 2016
 .Dt COMPAT_IBCS2 8
 .Os
 .Sh NAME
@@ -159,8 +159,8 @@ following files on your system:
 .Pa /emul/ibcs2/usr/lib/libndbm.so
 .Pa /emul/ibcs2/usr/lib/libsocket.so.1
 .Ed
-.Pp
 .El
+.Pp
 If you don't have access to a SCO system, you will need to get the
 extra files you need from a SCO distribution.
 As of January 1998, SCO
