--- a/share/man/man9/bus_dma.9
+++ b/share/man/man9/bus_dma.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: bus_dma.9,v 1.59 2013/10/30 04:16:44 msaitoh Exp $
+.\" $NetBSD: bus_dma.9,v 1.60 2016/06/01 01:55:18 pgoyette Exp $
 .\"
 .\" Copyright (c) 1996, 1997, 1998, 2001, 2005, 2006 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 8, 2011
+.Dd June 1, 2016
 .Dt BUS_DMA 9
 .Os
 .Sh NAME
@@ -841,9 +841,17 @@ interface appeared in
 .Sh AUTHORS
 The
 .Nm
-interface was designed and implemented by Jason R. Thorpe of the
+interface was designed and implemented by
+.An Jason R. Thorpe
+of the
 Numerical Aerospace Simulation Facility, NASA Ames Research Center.
 Additional input on the
 .Nm
-design was provided by Chris Demetriou, Charles Hannum, Ross Harvey,
-Matthew Jacob, Jonathan Stone, and Matt Thomas.
+design was provided by
+.An Chris Demetriou ,
+.An Charles Hannum ,
+.An Ross Harvey ,
+.An Matthew Jacob ,
+.An Jonathan Stone ,
+and
+.An Matt Thomas.
