Use .An for authors.  From PR misc/49516

--- a/share/man/man9/bus_space.9
+++ b/share/man/man9/bus_space.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: bus_space.9,v 1.46 2012/07/19 17:48:55 jdf Exp $
+.\" $NetBSD: bus_space.9,v 1.47 2016/06/01 01:57:31 pgoyette Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 6, 2011
+.Dd June 1, 2016
 .Dt BUS_SPACE 9
 .Os
 .Sh NAME
@@ -1994,9 +1994,14 @@ interfaces were designed and implemented by the
 .Nx
 developer
 community.
-Primary contributors and implementors were Chris Demetriou,
-Jason Thorpe, and Charles Hannum, but the rest of the
+Primary contributors and implementors were
+.An Chris Demetriou ,
+.An Jason Thorpe,
+and
+.An Charles Hannum ,
+but the rest of the
 .Nx
 developers and the user community played a significant role in development.
 .Pp
-Chris Demetriou wrote this manual page.
+,An Chris Demetriou
+wrote this manual page.
