--- a/share/man/man9/pfil.9
+++ b/share/man/man9/pfil.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: pfil.9,v 1.33 2013/08/22 07:17:11 wiz Exp $
+.\"	$NetBSD: pfil.9,v 1.34 2016/06/01 02:00:10 pgoyette Exp $
 .\"
 .\" Copyright (c) 1996 Matthew R. Green
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 22, 2013
+.Dd June 1, 2016
 .Dt PFIL 9
 .Os
 .Sh NAME
@@ -174,10 +174,17 @@ as well as be less IP-centric.
 .Sh AUTHORS
 The
 .Nm
-interface was designed and implemented by Matthew R. Green, with help
-from Darren Reed, Jason R. Thorpe and Charles M. Hannum.
-Darren Reed added support for IPv6 in addition to IPv4.
-Jason R. Thorpe added support for multiple hooks and other clean up.
+interface was designed and implemented by
+.An Matthew R. Green ,
+with help from
+.An Darren Reed ,
+.An Jason R. Thorpe ,
+and
+.An Charles M. Hannum .
+.An Darren Reed
+added support for IPv6 in addition to IPv4.
+.An Jason R. Thorpe
+added support for multiple hooks and other clean up.
 .Sh BUGS
 The current
 .Nm
