--- a/share/man/man9/pmc.9
+++ b/share/man/man9/pmc.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: pmc.9,v 1.12 2012/02/22 19:04:38 njoly Exp $
+.\" $NetBSD: pmc.9,v 1.13 2016/06/01 02:02:11 pgoyette Exp $
 .\"
 .\" Copyright (c) 2002, 2005 Wasabi Systems, Inc.
 .\" All rights reserved.
@@ -33,7 +33,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd May 14, 2010
+.Dd June 1, 2016
 .Dt PMC 9
 .Os
 .Sh NAME
@@ -253,7 +253,10 @@ interface appeared in
 .Sh AUTHORS
 The
 .Nm
-interface was designed and implemented by Allen Briggs for Wasabi Systems, Inc.
+interface was designed and implemented by
+.An Allen Briggs
+for Wasabi Systems, Inc.
 Additional input on the
 .Nm
-design was provided by Jason R. Thorpe.
+design was provided by
+.An Jason R. Thorpe .
