--- a/share/man/man9/rt_timer.9
+++ b/share/man/man9/rt_timer.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: rt_timer.9,v 1.13 2013/09/17 19:58:03 wiz Exp $
+.\"	$NetBSD: rt_timer.9,v 1.14 2016/06/01 02:05:10 pgoyette Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 23, 1998
+.Dd June 1, 2016
 .Dt RT_TIMER 9
 .Os
 .Sh NAME
@@ -129,5 +129,6 @@ interface appeared in
 .Sh AUTHORS
 This interface is roughly based on (but, alas, not compatible with) one
 designed by David Borman of BSDI.
-This implementation is by Kevin Lahey of the Numerical Aerospace
-Simulation Facility, NASA Ames Research Center.
+This implementation is by
+.An Kevin Lahey
+of the Numerical Aerospace Simulation Facility, NASA Ames Research Center.
