--- a/share/man/man9/scsipi.9
+++ b/share/man/man9/scsipi.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: scsipi.9,v 1.25 2010/03/22 18:58:33 joerg Exp $
+.\"	$NetBSD: scsipi.9,v 1.26 2016/06/01 02:05:10 pgoyette Exp $
 .\"
 .\"
 .\" Copyright (c) 2001 Manuel Bouyer.
@@ -24,7 +24,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd December 20, 2005
+.Dd June 1, 2016
 .Dt SCSIPI 9
 .Os
 .Sh NAME
@@ -596,5 +596,7 @@ interface appeared in
 .Sh AUTHORS
 The
 .Nm
-interface was designed and implemented by Jason R. Thorpe.
-Manuel Bouyer converted most drivers to the new interface.
+interface was designed and implemented by
+.An Jason R. Thorpe .
+.An Manuel Bouyer
+converted most drivers to the new interface.
