--- a/share/man/man9/ubc.9
+++ b/share/man/man9/ubc.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: ubc.9,v 1.7 2011/06/14 00:19:20 rmind Exp $
+.\"	$NetBSD: ubc.9,v 1.8 2016/06/01 02:05:10 pgoyette Exp $
 .\"
 .\" Copyright (c) 1998 Matthew R. Green
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 14, 2011
+.Dd June 1, 2016
 .Dt UBC 9
 .Os
 .Sh NAME
@@ -145,7 +145,7 @@ subsystem is implemented within the file
 UBC first appeared in
 .Nx 1.6 .
 .Sh AUTHORS
-Chuck Silvers
+.An Chuck Silvers
 .Aq chuq@chuq.com
 designed and implemented the UBC part of UVM, which uses UVM pages
 to cache vnode data rather than the traditional buffer cache buffers.
