--- a/share/man/man9/sysmon_pswitch.9
+++ b/share/man/man9/sysmon_pswitch.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: sysmon_pswitch.9,v 1.6 2015/01/06 15:39:54 bouyer Exp $
+.\" $NetBSD: sysmon_pswitch.9,v 1.7 2016/06/01 02:06:54 pgoyette Exp $
 .\"
 .\" Copyright (c) 2010 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -45,7 +45,7 @@
 The machine-independent
 .Nm
 provides a framework for power management.
-The interface has been largely superceded by the
+The interface has been largely superseded by the
 .Xr pmf 9
 framework, but
 .Nm
