--- a/share/man/man4/smscmon.4
+++ b/share/man/man4/smscmon.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: smscmon.4,v 1.4 2012/10/10 18:06:41 njoly Exp $
+.\"	$NetBSD: smscmon.4,v 1.5 2016/06/01 02:15:26 pgoyette Exp $
 .\"
 .\" Copyright (c) 2009 Takahiro Hayashi
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd February 21, 2010
+.Dd June 1, 2016
 .Dt SMSCMON 4
 .Os
 .Sh NAME
@@ -55,7 +55,7 @@ The chip supports 11 sensor inputs:
 .It Li "+1.8V" Ta "uV DC" Ta "1.8V Supply"
 .It Li "Remote Temp1" Ta "uK" Ta "CPU temperature"
 .It Li "Ambient Temp" Ta "uK" Ta "Local chip temperature"
-.It Li "Remote Temp2" Ta "uK"
+.It Li "Remote Temp2" Ta "uK" Ta ""
 .El
 .Sh SEE ALSO
 .Xr envsys 4 ,
