--- a/share/man/man4/swsensor.4
+++ b/share/man/man4/swsensor.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: swsensor.4,v 1.12 2012/08/27 20:52:40 wiz Exp $
+.\"	$NetBSD: swsensor.4,v 1.13 2016/06/01 02:15:26 pgoyette Exp $
 .\"
 .\" Copyright (c) 2010 The NetBSD Foundation
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd August 27, 2012
+.Dd June 1, 2016
 .Dt SWSENSOR 4
 .Os
 .Sh NAME
@@ -96,7 +96,7 @@ Any of the string values from the following table can be specified:
 .It "Voltage DC"       Ta "Ohms"      Ta "Watts"
 .It "Ampere"           Ta "Watt hour" Ta "Ampere hour"
 .It "Indicator"        Ta "Integer"   Ta "Drive"
-.It "Battery capacity" Ta "Battery charge"
+.It "Battery capacity" Ta "Battery charge" Ta ""
 .El
 (Values are case-sensitive, and spaces must be included.)
 .It Li "value"
