Add the posix -C option (-c but quieter).  Fix -R to work properly when setting \n as the record delimited using a numeric value rather than literal \n - and to not incorrectly turn \n into a field separator if -R is used to make some other char the record separator (\n becomes a field separator in that case as long as the field separator remains "white space" but should not be in any other case - unless set explicitly of course.)
Plus more cosmetic changes - the man page and usage are updated to make it
more clear that the 2 (or 1) params to -k are not fields (field1 and field2)
but specifiers of the beginning and end of one key field.   There was an
unused 'x' option in the GETOPTS string.  The usage message is reformatted
to display properly on both 80 col and > 80 col displays (on < 80 it will
still probably look pretty ugly ... perhaps not quite so bad though), and
is also updated to show the different usage for the -c case (and -C) from the
others (only 1 file permitted) - the man page synopsis has a similar update.

Using more than one of -c -C or -m generates a usage message rather than
just ignoring the -m as it did before (there was no -C before of course).

Aside from the bug fix to the interaction between -R and -t, there are no
changes that affect the way anything is sorted (or read, or written).

Discussed on tech-userlevel earlier this week.

--- a/usr.bin/sort/sort.1
+++ b/usr.bin/sort/sort.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: sort.1,v 1.34 2013/05/29 15:00:35 wiz Exp $
+.\"	$NetBSD: sort.1,v 1.35 2016/06/01 02:37:55 kre Exp $
 .\"
 .\" Copyright (c) 2000-2003 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -67,16 +67,26 @@
 .Nd sort or merge text files
 .Sh SYNOPSIS
 .Nm
-.Op Fl bcdfHilmnrSsu
+.Op Fl bdfHilmnrSsu
 .Oo
 .Fl k
-.Ar field1 Ns Op Li \&, Ns Ar field2
+.Ar kstart Ns Op Li \&, Ns Ar kend
 .Oc
 .Op Fl o Ar output
 .Op Fl R Ar char
 .Op Fl T Ar dir
 .Op Fl t Ar char
 .Op Ar
+.Nm
+.Fl c|C
+.Op Fl bdfilnru
+.Oo
+.Fl k
+.Ar kstart Ns Op Li \&, Ns Ar kend
+.Op Fl t Ar char
+.Oc
+.Op Fl R Ar char
+.Op Ar file
 .Sh DESCRIPTION
 The
 .Nm
@@ -101,6 +111,10 @@ returns 0.
 produces no output.
 See also
 .Fl u .
+.It Fl C
+Identical to
+.Fl c
+without the error messages in the case of unsorted input.
 .It Fl H
 Ignored for compatibility with earlier versions of
 .Nm .
@@ -137,9 +151,13 @@ If used with the
 option, check that there are no lines with duplicate keys.
 .El
 .Pp
-The following options override the default ordering rules.
-When ordering options appear independent of key field
-specifications, the requested field ordering rules are
+The following options,
+which should be given before any
+.Fl k
+options, override the default ordering rules.
+When ordering options appear independent of,
+and before, key field specifications,
+the requested field ordering rules are
 applied globally to all sort keys.
 When attached to a specific key (see
 .Fl k ) ,
@@ -224,12 +242,21 @@ is used as the record separator character.
 This should be used with discretion;
 .Fl R Aq Ar alphanumeric
 usually produces undesirable results.
+If char is not a single character, then it
+specifies the value of the desired record
+separator as an integer specified in any
+of the normal NNN, 0ooo, or 0xXXX ways,
+or as an octal value preceded by \e.
+Caution: do not attempt to specify Ctl-A
+as
+.Dq -R 1
+which will not do what was intended at all!
 The default record separator is newline.
-.It Fl k Ar field1 Ns Op Li \&, Ns Ar field2
+.It Fl k Ar kstart Ns Op Li \&, Ns Ar kend
 Designates the starting position,
-.Ar field1 ,
+.Ar kstart ,
 and optional ending position,
-.Ar field2 ,
+.Ar kend ,
 of a key field.
 The
 .Fl k
@@ -265,16 +292,16 @@ first field.
 Fields are specified
 by the
 .Fl k
-.Ar field1 Ns Op \&, Ns Ar field2
+.Ar kstart Ns Op \&, Ns Ar kend
 argument.
 A missing
-.Ar field2
+.Ar kend
 argument defaults to the end of a line.
 .Pp
 The arguments
-.Ar field1
+.Ar kstart
 and
-.Ar field2
+.Ar kend
 have the form
 .Ar m Ns Li \&. Ns Ar n
 and can be followed by one or more of the letters
@@ -284,7 +311,7 @@ and
 .Cm r ,
 which correspond to the options discussed above.
 A
-.Ar field1
+.Ar kstart
 position specified by
 .Ar m Ns Li \&. Ns Ar n
 .Pq Ar m , n No \*[Gt] 0
@@ -296,7 +323,7 @@ field.
 A missing
 .Li \&. Ns Ar n
 in
-.Ar field1
+.Ar kstart
 means
 .Ql \&.1 ,
 indicating the first character of the
@@ -314,7 +341,7 @@ refers to the first non-blank character in the
 field.
 .Pp
 A
-.Ar field2
+.Ar kend
 position specified by
 .Ar m Ns Li \&. Ns Ar n
 is interpreted as
@@ -364,6 +391,38 @@ option is still supported, except for
 which has no
 .Fl k
 equivalent.
+.Pp
+.Nm
+compares records by comparing the key fields selected by
+.Fl k
+arguments,
+from first given to last,
+until discovering a difference.
+If there are no
+.Fl k
+arguments, the whole record is treated as a single key.
+After exhausting the
+.Fl k
+arguments, if no difference has been found,
+then the result depends upon the
+.Fl u
+and
+.Fl S
+option settings.
+With
+.Fl u
+the records are considered identical, and one is supressed.
+Otherwise with
+.Fl s
+set (default) the records are left in their original order,
+or with
+.Fl S
+(posix mode) the whole record is considered as a tie breaker.
+.\"
+.\" If you fail to understand why it doesn't matter which order
+.\" the records are output when they are wholly identical, there
+.\" is nothing that this man page can say that wll help!
+.\"
 .Sh ENVIRONMENT
 If the following environment variable exists, it is used by
 .Nm .
@@ -398,6 +457,8 @@ Normal behavior.
 .It 1
 On disorder (or non-uniqueness) with the
 .Fl c
+(or
+.Fl C )
 option
 .It 2
 An error occurred.
@@ -451,7 +512,7 @@ and merge sorts and did not.)
 Thus performance depends highly on efficient choice of sort keys, and the
 .Fl b
 option and the
-.Ar field2
+.Ar kend
 argument of the
 .Fl k
 option should be used whenever possible.
