Sort SEE ALSO, use Mt for email addresses.

--- a/share/man/man4/mc.4
+++ b/share/man/man4/mc.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: mc.4,v 1.3 2016/06/01 01:39:52 pgoyette Exp $
+.\"	$NetBSD: mc.4,v 1.4 2016/06/01 08:13:23 wiz Exp $
 .\"
 .\" Copyright (c) 1997 David Huang <khym@bga.com>
 .\" All rights reserved.
@@ -67,9 +67,9 @@ This is a normal autoconfiguration message noting the 6 byte physical
 Ethernet address of the adapter.
 .El
 .Sh SEE ALSO
-.Xr \&mac68k/ae 4 ,
-.Xr \&mac68k/bm 4 ,
 .Xr gem 4 ,
+.Xr mac68k/ae 4 ,
+.Xr mac68k/bm 4 ,
 .Xr sn 4 ,
 .Xr tlp 4 ,
 .Xr ifconfig 8
@@ -83,10 +83,10 @@ The
 .Nm
 Ethernet driver was written by
 .An Dave Huang
-.Aq khym@bga.com .
+.Aq Mt khym@bga.com .
 The man page was written by
 .An Thomas Klausner
-.Aq wiz@NetBSD.org
+.Aq Mt wiz@NetBSD.org
 and
 .An Michael Wolfson
-.Aq mbw@NetBSD.org .
+.Aq Mt mbw@NetBSD.org .
