Use .An -nosplit.

--- a/share/man/man4/mc.4
+++ b/share/man/man4/mc.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: mc.4,v 1.4 2016/06/01 08:13:23 wiz Exp $
+.\"	$NetBSD: mc.4,v 1.5 2016/06/01 08:14:42 wiz Exp $
 .\"
 .\" Copyright (c) 1997 David Huang <khym@bga.com>
 .\" All rights reserved.
@@ -79,6 +79,7 @@ The
 interface first appeared in
 .Nx 1.3 .
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
 Ethernet driver was written by
