--- a/share/man/man4/sony.4
+++ b/share/man/man4/sony.4
@@ -1,4 +1,4 @@
-.\" $NetBSD: sony.4,v 1.3 2016/06/01 01:44:22 pgoyette Exp $
+.\" $NetBSD: sony.4,v 1.4 2016/06/01 08:14:16 wiz Exp $
 .\"
 .\" Copyright (c) 2005 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -109,6 +109,7 @@ driver
 appeared in
 .Nx 4.0 .
 .Sh AUTHORS
+.An -nosplit
 .An Sami Kantoluoto
 for the original driver and manual information.
 .An Christos Zoulas
