--- a/share/man/man4/ss.4
+++ b/share/man/man4/ss.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: ss.4,v 1.5 2016/06/01 01:46:51 pgoyette Exp $
+.\"	$NetBSD: ss.4,v 1.6 2016/06/01 08:15:07 wiz Exp $
 .\"
 .Dd June 1, 2016
 .Dt SS 4
@@ -37,6 +37,7 @@ operations only.
 .Xr scsi 4 ,
 .Xr uk 4
 .Sh AUTHORS
+.An -nosplit
 .An Kenneth Stailey ,
 .An Joachim Koenig
 .Sh BUGS
