Use Mt for email addresses.

--- a/share/man/man9/ubc.9
+++ b/share/man/man9/ubc.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: ubc.9,v 1.8 2016/06/01 02:05:10 pgoyette Exp $
+.\"	$NetBSD: ubc.9,v 1.9 2016/06/01 08:17:12 wiz Exp $
 .\"
 .\" Copyright (c) 1998 Matthew R. Green
 .\" All rights reserved.
@@ -146,6 +146,6 @@ UBC first appeared in
 .Nx 1.6 .
 .Sh AUTHORS
 .An Chuck Silvers
-.Aq chuq@chuq.com
+.Aq Mt chuq@chuq.com
 designed and implemented the UBC part of UVM, which uses UVM pages
 to cache vnode data rather than the traditional buffer cache buffers.
