Fix typo. Use .An -nosplit.

--- a/share/man/man9/bus_space.9
+++ b/share/man/man9/bus_space.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: bus_space.9,v 1.47 2016/06/01 01:57:31 pgoyette Exp $
+.\" $NetBSD: bus_space.9,v 1.48 2016/06/01 08:17:33 wiz Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -1988,6 +1988,7 @@ This document was written later during the
 development cycle and the specification was updated to fix some
 consistency problems and to add some missing functionality.
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
 interfaces were designed and implemented by the
@@ -2003,5 +2004,5 @@ but the rest of the
 .Nx
 developers and the user community played a significant role in development.
 .Pp
-,An Chris Demetriou
+.An Chris Demetriou
 wrote this manual page.
