Use .An -nosplit.

--- a/share/man/man9/bus_dma.9
+++ b/share/man/man9/bus_dma.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: bus_dma.9,v 1.60 2016/06/01 01:55:18 pgoyette Exp $
+.\" $NetBSD: bus_dma.9,v 1.61 2016/06/01 08:17:47 wiz Exp $
 .\"
 .\" Copyright (c) 1996, 1997, 1998, 2001, 2005, 2006 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -839,6 +839,7 @@ The
 interface appeared in
 .Nx 1.3 .
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
 interface was designed and implemented by
