--- a/share/man/man9/pfil.9
+++ b/share/man/man9/pfil.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: pfil.9,v 1.34 2016/06/01 02:00:10 pgoyette Exp $
+.\"	$NetBSD: pfil.9,v 1.35 2016/06/01 08:17:47 wiz Exp $
 .\"
 .\" Copyright (c) 1996 Matthew R. Green
 .\" All rights reserved.
@@ -172,6 +172,7 @@ In 1.5K, the
 framework was changed to work with an arbitrary number of filtering points,
 as well as be less IP-centric.
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
 interface was designed and implemented by
