--- a/share/man/man9/pmc.9
+++ b/share/man/man9/pmc.9
@@ -1,4 +1,4 @@
-.\" $NetBSD: pmc.9,v 1.13 2016/06/01 02:02:11 pgoyette Exp $
+.\" $NetBSD: pmc.9,v 1.14 2016/06/01 08:17:47 wiz Exp $
 .\"
 .\" Copyright (c) 2002, 2005 Wasabi Systems, Inc.
 .\" All rights reserved.
@@ -251,6 +251,7 @@ The
 interface appeared in
 .Nx 2.0 .
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
 interface was designed and implemented by
