--- a/share/man/man9/rt_timer.9
+++ b/share/man/man9/rt_timer.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: rt_timer.9,v 1.14 2016/06/01 02:05:10 pgoyette Exp $
+.\"	$NetBSD: rt_timer.9,v 1.15 2016/06/01 08:17:47 wiz Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -127,6 +127,7 @@ The
 interface appeared in
 .Nx 1.4 .
 .Sh AUTHORS
+.An -nosplit
 This interface is roughly based on (but, alas, not compatible with) one
 designed by David Borman of BSDI.
 This implementation is by
