--- a/share/man/man9/scsipi.9
+++ b/share/man/man9/scsipi.9
@@ -1,4 +1,4 @@
-.\"	$NetBSD: scsipi.9,v 1.26 2016/06/01 02:05:10 pgoyette Exp $
+.\"	$NetBSD: scsipi.9,v 1.27 2016/06/01 08:17:47 wiz Exp $
 .\"
 .\"
 .\" Copyright (c) 2001 Manuel Bouyer.
@@ -594,6 +594,7 @@ The
 interface appeared in
 .Nx 1.6 .
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
 interface was designed and implemented by
