--- a/lib/libc/stdlib/malloc.3
+++ b/lib/libc/stdlib/malloc.3
@@ -1,4 +1,4 @@
-.\" $NetBSD: malloc.3,v 1.47 2016/06/01 05:40:26 pgoyette Exp $
+.\" $NetBSD: malloc.3,v 1.48 2016/06/01 08:32:05 wiz Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -144,11 +144,13 @@ The
 .Fn realloc
 function always leaves the original buffer intact
 when an error occurs.
-+If
-+.Ar size
-+is 0, either NULL or a pointer that can be safely passed to
-+.Xr free 3
-+is returned.
+If
+.Ar size
+is 0, either
+.Dv NULL
+or a pointer that can be safely passed to
+.Xr free 3
+is returned.
 .Pp
 The
 .Fn free
