--- a/sbin/mount_nilfs/mount_nilfs.8
+++ b/sbin/mount_nilfs/mount_nilfs.8
@@ -1,4 +1,4 @@
-.\" $NetBSD: mount_nilfs.8,v 1.3 2016/06/01 11:56:49 pgoyette Exp $
+.\" $NetBSD: mount_nilfs.8,v 1.4 2016/06/01 12:01:21 wiz Exp $
 .\"
 .\" Copyright (c) 2008, 2009 Reinoud Zandijk
 .\" All rights reserved.
@@ -48,8 +48,8 @@
 .Sh DESCRIPTION
 NILFS is a log-structured file system designed to support fast
 writing, fast recovery times, live snapshots, concurrent read-only
-snapshot mounts, and live file system resizing.  Its inodes are
-managed using B-trees.
+snapshot mounts, and live file system resizing.
+Its inodes are managed using B-trees.
 .Pp
 The
 .Nm
@@ -79,24 +79,29 @@ If not set, the user's current time zone will be used.
 .Xr vnd 4 ,
 .Xr fstab 5 ,
 .Xr mount 8 ,
-.Xr umount 8 ,
 .Xr mount_lfs 8 ,
+.Xr umount 8 ,
 .Xr vnconfig 8
 .Sh HISTORY
 NILFS is a file system developped by NTT and released in 2005 for
-Linux.  Version 2 is available since 2009.
+Linux.
+Version 2 is available since 2009.
 This cleanroom implementation was written by
 .An -nosplit
 .An Reinoud Zandijk
-for NetBSD in 2009, and has first been released as part of NetBSD 6.
+for
+.Nx
+in 2009, and has first been released as part of
+.Nx 6 .
 .Sh AUTHORS
 This implementation of NILFS was written by
-.An Reinoud Zandijk.
+.An Reinoud Zandijk .
 .Sh CAVEATS
 This implementation currently only supports read-only operation.
 See
 .Xr mount_lfs 8
-for an older log-structured file system with write support.  Also see
+for an older log-structured file system with write support.
+Also see
 .Xr wapbl 4
 and
 .Xr mount 8
