Add 3Com 3CRWE777A (and, belatedly, 3CRWE737A) to the supported devices.
From PR kern/39590

--- a/share/man/man4/wi.4
+++ b/share/man/man4/wi.4
@@ -1,4 +1,4 @@
-.\"     $NetBSD: wi.4,v 1.40 2014/03/18 18:20:39 riastradh Exp $
+.\"     $NetBSD: wi.4,v 1.41 2016/06/01 23:40:05 pgoyette Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -30,9 +30,9 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
 .\" THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: wi.4,v 1.40 2014/03/18 18:20:39 riastradh Exp $
+.\"	$Id: wi.4,v 1.41 2016/06/01 23:40:05 pgoyette Exp $
 .\"
-.Dd July 6, 2005
+.Dd June 2, 2016
 .Dt WI 4
 .Os
 .Sh NAME
@@ -121,6 +121,10 @@ Cards supported by the
 driver include:
 .Pp
 .Bl -item -offset indent -compact
+.It
+3Com AirConnect 3CRWE737A
+.It
+3Com AirConnect 3CRWE777A
 .It
 Alvarion BreezeNET
 .It
